--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,8 +4,7 @@ metadata:
   name: custom-microservice-archetype
   description: Sample service for creating a archetype microservice with all the plumbing needed
   annotations:
-    backstage.io/techdocs-ref: https://github.com/ppulimamidy/custom-microservice-archetype/blob/master/README.md
-spec:
+    backstage.io/techdocs-ref: https://github.com/ppulimamidy/custom-microservice-archetype/blob/master/archetype/techdoc.doc
   type: service
   lifecycle: dev
   owner: user-team
