--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: custom-microservice-archetype
   description: Sample service for creating a archetype microservice with all the plumbing needed
   annotations:
-    backstage.io/techdocs-ref: dir:./docs
+    backstage.io/techdocs-ref: dir:./archetype/docs
   type: service
   lifecycle: dev
   owner: user-team
